fix broken responsiveness on mobile view

--- a/styles.css
+++ b/styles.css
@@ -50,17 +50,21 @@
   background-color: #f7f7f7;
 }
 
+.clear-float {
+  clear: both;
+}
+
 .logo-img {
   width: 30px;
 }
 
 .search-location,
 .logo-link {
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 .nav-link {
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 .homes h5 span {
@@ -80,6 +84,10 @@
 .result-item-action button {
   border-radius: 0;
   padding: 0 5px 3px 5px;
+}
+
+.title-divider {
+  width: 95%;
 }
 
 .image-arrows {
@@ -113,14 +121,24 @@
   height: 38px;
 }
 
+.search-dropdown-wrapper {
+  width: 15%;
+  margin-right: 0.5%;
+}
+
 .search-bar-input {
-  flex-basis: 48%;
+  flex-basis: 49.5%;
+  margin-right: 0.5%;
   background-clip: border-box;
 }
 
 .search-bar-location {
-  flex-basis: 30%;
+  flex-basis: 29.5%;
   background-clip: border-box;
+}
+
+.search-btn {
+  flex-basis: 20%;
 }
 
 .remove-border-radius {
@@ -136,17 +154,8 @@
   height: 50px;
 }
 
-.footer-menu {
-  display: flex;
-  justify-content: space-around;
-}
-
-.footer-note {
-  flex-basis: 46%;
-}
-
 .footer-note p {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 .footer-links-wrapper {
@@ -161,7 +170,7 @@
 .links-a,
 .links-b {
   font-size: 0.9em;
-  flex-basis: 40%;
+  flex-basis: 50%;
 }
 
 .background-image-style {
@@ -210,4 +219,40 @@
 
 .remove-hover-effect:hover {
   color: #383838;
+}
+
+@media only screen and (max-width: 375px) {
+  .nav-link {
+    font-size: 0.6em;
+  }
+
+  .nav-item {
+    margin: 0 !important;
+    margin-right: 7px !important;
+  }
+
+  .logo-img {
+    width: 20px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .nav-link {
+    font-size: 0.8em;
+  }
+
+  .search-bar-input {
+    flex-basis: 25%;
+    margin-right: 0.5%;
+  }
+
+  .search-bar-location {
+    flex-basis: 25%;
+    background-clip: border-box;
+    margin-right: 0.5%;
+  }
+
+  .logo-link {
+    font-size: 0.9em;
+  }
 }
